--- a/src/app/pages/categories/categories-list/categories-list.component.html
+++ b/src/app/pages/categories/categories-list/categories-list.component.html
@@ -1,1 +1,44 @@
-<p>categories-list works!</p>
+    <nav class="mb-5">
+        <ol class="breadcrumb"> 
+            <li class="breadcrumb-item" > 
+                <a routerLink="/">Home</a>
+            </li>
+            <li class="breadcrumb-item active"> Categorieas</li> 
+        </ol>
+    </nav>
+
+    <div class="row mb-4">
+        <div class="col-md">
+            <h1 class="h2 border-left pl-2">
+                Categorias
+            </h1>
+        </div>
+        <div class="col-md">
+            <a   routerLink="new" class="btn btn-success float-right">
+                + Nova Categoria
+            </a> 
+        </div>
+    </div>
+
+
+    <table class="table table-hover">
+        <thead>
+            <tr class="bg-primary text-light">
+                <th>Categoria</th>
+                <th>Ação</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let category of categories">
+                <td>
+                    <strong>{{ category.name}}</strong><br>
+                    <small>{{ category.description}}</small>
+                </td>
+                <td>
+                    <a [routerLink]="[category.id,'edit']" class="btn btn-outline-info btn-sm">Editar</a>
+                    <button (click)="remover()"  class="btn btn-outline-danger btn-sm">Deletar</button>
+                </td>
+            </tr>
+            
+        </tbody>
+    </table>
